[package]
name = "jackin-runtime"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Container bootstrap pipeline: runtime, instance, isolation. Holds the concrete DockerApi/CommandRunner impls, image build, DinD sidecar management, mount materialization, and instance lifecycle."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_runtime"
path = "src/lib.rs"

[dependencies]
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-config = { version = "0.6.0-dev", path = "../jackin-config" }
jackin-env = { version = "0.6.0-dev", path = "../jackin-env" }
jackin-manifest = { version = "0.6.0-dev", path = "../jackin-manifest" }
jackin-docker = { version = "0.6.0-dev", path = "../jackin-docker" }
jackin-image = { version = "0.6.0-dev", path = "../jackin-image" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
jackin-launch-tui = { version = "0.6.0-dev", path = "../jackin-launch-tui" }
jackin-host = { version = "0.6.0-dev", path = "../jackin-host" }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
jackin-tui = { version = "0.6.0-dev", path = "../jackin-tui" }

tracing = "0.1"
tokio = { version = "1", features = ["rt", "process", "io-util", "io-std", "net", "signal", "sync", "macros", "time", "fs"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
owo-colors = { version = "4", features = ["supports-colors"] }
ratatui = "0.30"
crossterm = "0.29"
dialoguer = "0.12"
sha2 = "0.11"
hex = "0.4"
fs2 = "0.4"
directories = "6.0"
toml = "1.1"
toml_edit = "0.25"
tabled = "0.21.0"
serde_yaml_ng = "0.10.0"
tempfile = "3.20"
url = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }

[dev-dependencies]
criterion = { version = "=0.8.2", features = ["html_reports"] }
tokio = { version = "=1.52.3", features = ["test-util"] }

[[bench]]
name = "launch_attach"
harness = false

[build-dependencies]
jackin-build-meta = { version = "0.6.0-dev", path = "../jackin-build-meta" }

[features]
test-support = []

[lints]
workspace = true
