[package]
name = "jackin-runtime"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Container bootstrap pipeline: runtime, instance, isolation. Holds the concrete DockerApi/CommandRunner impls, image build, DinD sidecar management, mount materialization, and instance lifecycle."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_runtime"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
jackin-config = { workspace = true }
jackin-env = { workspace = true }
jackin-manifest = { workspace = true }
jackin-docker = { workspace = true }
jackin-image = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-launch-tui = { workspace = true }
jackin-host = { workspace = true }
jackin-protocol = { workspace = true }
jackin-isolation = { workspace = true }
jackin-instance = { workspace = true }

tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "io-util", "io-std", "net", "signal", "sync", "macros", "time", "fs"] }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
fs4 = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }

[dev-dependencies]
jackin-tui = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
jackin-build-meta = { workspace = true }

[features]
daemon-spike = []
test-support = []

[[bench]]
name = "launch_attach"
harness = false

[lints]
workspace = true
